# video-progress-bar-cli

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  cleanDist.sh  pyproject.toml  requirements.txt  setup.py
docs/guides/: performance_optimization.md  progressbar_upgrade.md
draft-code/: README.md  add_progressbar.py  tts_test.py
draft-code/test_data/: test_speech.ass
examples/: add_progressbar_example.py  basic_usage.py
scripts/: video-process
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  add_progressbar.py  ass_to_tts.py  auto_caption.py  extract_subs.py
src/config/: __init__.py  settings.py
src/video_processing/: __init__.py
src/video_processing/core/: __init__.py  audio_mixer.py  base.py  tts_engine.py
src/video_processing/processors/: __init__.py  caption_processor.py  progress_bar.py  subtitle_extractor.py  vertical_processor.py
src/video_processing/utils/: __init__.py  file_utils.py  layout.py  progress_parser.py  time_utils.py  video_metadata.py
src/video_processing/validators/: __init__.py  input_validator.py
tests/: test_captioning_step1.py
tests/integration/: __init__.py  test_extract_subs.py
tests/unit/: __init__.py
